# gpr200-fa2024-zeben-brown

./: CMakeLists.txt
assignments/assignment1_helloTriangle/: CMakeLists.txt  main.cpp
assignments/assignment1_helloTriangle/assets/: fragmentShader.frag  vertexShader.vert
assignments/assignment2/: CMakeLists.txt  main.cpp
assignments/assignment2/assets/: backgroundFragmentShader.frag  backgroundVertexShader.vert  fragmentShader.frag  spriteFragmentShader.frag  spriteVertexShader.vert  vertexShader.vert
assignments/assignment2_Indicies_Textures_Blending/: CMakeLists.txt  main.cpp
assignments/assignment2_Indicies_Textures_Blending/assets/: fragmentShader.frag
assignments/assignment4/: CMakeLists.txt  main.cpp
assignments/assignment4/assets/: backgroundFragmentShader.frag  backgroundVertexShader.vert  spriteFragmentShader.frag
assignments/assignment5/: CMakeLists.txt  main.cpp
assignments/assignment5/assets/: backgroundFragmentShader.frag  backgroundVertexShader.vert  lightCubeShader.frag  lightCubeShader.vert
assignments/assignment6/: CMakeLists.txt  main.cpp
assignments/assignment6/assets/: backgroundVertexShader.vert  lightCubeShader.vert  torus.frag  torus.vert
core/: CMakeLists.txt
core/Zeben/: Camera.cpp  Camera.h  Shader.cpp  Shader.h  TorusGen.cpp  TorusGen.h  TorusMesh.cpp  TorusMesh.h  textRendering.cpp  textRendering.h  texture.cpp  texture.h
